syntax = "proto3";
package eadp.rtm;

import "common.proto";
import "requests.proto";
import "responses.proto";

message Communication {
    CommunicationV1 v1 = 1;
}

message CommunicationV1 {
    string requestId = 1;

    oneof body {
        PresenceSubscribeV1 presenceSubscribe = 2;
        PresenceUpdateV1 presenceUpdate = 5;
        PresenceV1 presence = 7;
        ErrorV1 error = 13;
        ReconnectRequestV1 reconnectRequest = 14;
        SuccessV1 success = 15;
        HeartbeatV1 heartbeat = 20;
        LoginRequestV3 loginRequestV3 = 46;
        SessionCleanupV1 sessionCleanupV1 = 49;
    }
}
